# cpt64

./: .gitignore  CMakeLists.txt  README.md  bmi.c  build.sh  dump.txt  final_dump.txt  project.conf
include/: c64.h  c64_core.h  c64_types.h  config.h.in  cpu.h  memory.h
include/cia/: cia.h
include/core/: app.h  bus.h  emu.h  system.h
include/cpu/: addressing.h  cpu.h  instructions.h  opcodes.h
include/log/: log.h
include/memory/: memory.h
include/video/: vic.h  video.h
src/: c64_core.c  cpu.c  cpu.h  main.c  memory.c  memory.h  opcodes.c  opcodes.h
src/app/: CMakeLists.txt  layout.c  main.c
src/cia/: CMakeLists.txt  cia.c
src/cli/: CMakeLists.txt  main.c
src/core/: CMakeLists.txt  app.c  bus.c  emu.c  system.c
src/cpu/: CMakeLists.txt  addressing.c  cpu.c  instructions.c  mos6510.c  mos6510.h  opcodes.c
src/cpu/opcodes/: adc.c  adc.h  and.c  and.h  asl.c  asl.h  bcc.c  bcc.h  bcs.c  bcs.h  beq.c  beq.h  bit.c  bit.h  bmi.c  bmi.h  bne.c  bpl.c  bpl.h  brk.c  brk.h  bvc.c  bvs.c  bvs.h  clc.c  clc.h  cld.c  cli.c  cmp.c  cmp.h  cpx.c  dec.c  dex.c  dey.h  eor.h
src/gui/: CMakeLists.txt  main.c
src/log/: CMakeLists.txt  log.c  log_internal.h  log_raylib.c  log_raylib.h  log_stdout.c
src/memory/: CMakeLists.txt  memory.c
src/opcodes/: adc.c  and.c  asl.c  bcc.c  bcs.c  bcs.h  beq.c  beq.h  bit.c  bmi.c  bne.c  bne.h  bpl.c  brk.c  bvc.c  bvc.h  bvs.c  clc.c  cld.c  cld.h  cli.c  cli.h  clv.c  clv.h  cmp.c  cpx.c  cpx.h  cpy.c  cpy.h  dec.c  dec.h  dex.c  dey.c  eor.c  inc.c  inc.h  inx.c  inx.h  iny.c  iny.h  (+58 more)
src/video/: CMakeLists.txt  vic.c  video.c
tests/: CMakeLists.txt  bus_test.c  test_core.c  test_log.c  test_runner.c  test_video.c
